@@ -71,8 +71,10 @@ Mongos.prototype.connect = function(db, options, callback) {
 
 				// Set the mongos to connected
 				self._serverState = "connected";
+        // Emit the open event
+        self.db.emit("open", null, self.db);
 				// Callback
-				callback(null, null);
+				callback(null, self.db);
 			}
 		}
 	};
