@@ -406,7 +406,7 @@ ReplSet.prototype.validateReplicaset = function(result) {
       process.nextTick(function() {
         // Call the setup
         newServerCallback(err, result);
-      })
+      });
 
       // If we have 0 new servers let's go back to rechecking
       if(serverKeys.length <= 0) {
@@ -519,6 +519,9 @@ ReplSet.prototype.connect = function(parent, options, callback) {
                 // Close the replicaset
                 replSetSelf.close(function() {
                   __executeAllCallbacksWithError(parent, err);
+                  // Set the parent
+                  if(typeof parent.openCalled != 'undefined')
+                    parent.openCalled = false;
                   // Ensure single callback only
                   if(callback != null) {
                     // Single callback only
@@ -576,6 +579,9 @@ ReplSet.prototype.connect = function(parent, options, callback) {
                 // Close the replicaset
                 replSetSelf.close(function() {
                   __executeAllCallbacksWithError(parent, err);
+                  // Set the parent
+                  if(typeof parent.openCalled != 'undefined')
+                    parent.openCalled = false;
                   // Ensure single callback only
                   if(callback != null) {
                     // Single callback only
@@ -633,6 +639,9 @@ ReplSet.prototype.connect = function(parent, options, callback) {
                 // Close the replicaset
                 replSetSelf.close(function() {
                   __executeAllCallbacksWithError(parent, err);
+                  // Set the parent
+                  if(typeof parent.openCalled != 'undefined')
+                    parent.openCalled = false;
                   // Ensure single callback only
                   if(callback != null) {
                     // Single callback only
@@ -805,9 +814,7 @@ ReplSet.prototype.connect = function(parent, options, callback) {
               self._numberOfServersLeftToInitialize = self._numberOfServersLeftToInitialize + 1;
 
               // Let's set up a new server instance
-              // process.nextTick(function() {
-                newServer.connect(parent, {returnIsMasterResults: true, eventReceiver:newServer}, self.connectionHandler(newServer));
-              // })
+              newServer.connect(parent, {returnIsMasterResults: true, eventReceiver:newServer}, self.connectionHandler(newServer));
             }
           }
         } else {
@@ -820,15 +827,21 @@ ReplSet.prototype.connect = function(parent, options, callback) {
       }
 
       // Check if we are ready in the next tick to allow more connections to be done
-      process.nextTick(function() {
+      // process.nextTick(function() {
         // Call back as we have a master letting the rest of the connections happen async
         if(masterCallback != null) {
           var internalCallback = masterCallback;
           masterCallback = null;
-          // Process callback
+
+          // Fire open event
+          process.nextTick(function() {
+            // Emit the open event
+            parent.emit("open", null, parent);
+          });
+
           internalCallback(null, parent);
         }
-      });
+      // });
 
       // If done finish up
       if((self._numberOfServersLeftToInitialize == 0) && replSetSelf._serverState === 'connecting' && replSetSelf._state.errorMessages.length == 0) {
@@ -846,23 +859,36 @@ ReplSet.prototype.connect = function(parent, options, callback) {
               // ensure no callbacks get called twice
               var internalCallback = callback;
               callback = null;
+
+              // Fire open event
+              process.nextTick(function() {
+                // Emit on db parent
+                parent.emit("fullsetup");
+                // Emit all servers done
+                replSetSelf.emit("fullsetup")
+              });
+
               // Callback
               if(typeof internalCallback == 'function') {
                 internalCallback(null, parent);
               }
-              // Emit all servers done
-              replSetSelf.emit("fullsetup")
             })
           } else {
             // ensure no callbacks get called twice
             var internalCallback = callback;
             callback = null;
+
+            // Fire open event
+            process.nextTick(function() {
+              parent.emit("fullsetup");
+              // Emit all servers done
+              replSetSelf.emit("fullsetup")
+            });
+
             // Callback
             if(typeof internalCallback == 'function') {
               internalCallback(null, parent);
             }
-            // Emit all servers done
-            replSetSelf.emit("fullsetup")
           }
         } else if(replSetSelf.readSecondary == true && Object.keys(replSetSelf._state.secondaries).length > 0) {
           // If we have a read strategy boot it
@@ -874,23 +900,35 @@ ReplSet.prototype.connect = function(parent, options, callback) {
               // ensure no callbacks get called twice
               var internalCallback = callback;
               callback = null;
+
+              // Fire open event
+              process.nextTick(function() {
+                parent.emit("fullsetup");
+                // Emit all servers done
+                replSetSelf.emit("fullsetup")
+              });
+
               // Callback
               if(typeof internalCallback == 'function') {
                 internalCallback(null, parent);
               }
-              // Emit all servers done
-              replSetSelf.emit("fullsetup")
             })
           } else {
             // ensure no callbacks get called twice
             var internalCallback = callback;
             callback = null;
+
+            // Fire open event
+            process.nextTick(function() {
+              parent.emit("fullsetup");
+              // Emit all servers done
+              replSetSelf.emit("fullsetup")
+            });
+
             // Callback
             if(typeof internalCallback == 'function') {
               internalCallback(null, parent);
             }
-            // Emit all servers done
-            replSetSelf.emit("fullsetup")
           }
         } else if(replSetSelf.readSecondary == true && Object.keys(replSetSelf._state.secondaries).length == 0) {
           replSetSelf._serverState = 'disconnected';
