@@ -219,6 +219,10 @@ Server.prototype.connect = function(dbInstance, options, callback) {
     server.connected = true;
     // Save document returned so we can query it
     server.isMasterDoc = reply.documents[0];
+
+    // Emit open event
+    _emitAcrossAllDbInstances(server, eventReceiver, "open", null, returnIsMasterResults ? reply : dbInstance, null);
+
     // If we have it set to returnIsMasterResults
     if(returnIsMasterResults) {
       internalCallback(null, reply);
@@ -329,7 +333,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
                 // Fire all callback errors
                 _fireCallbackErrors(server, new Error("connection closed due to parseError"));
                 // Emit error
-                _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server);
+                _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server, null, true);
               }
               // Short cut
               return;
@@ -399,7 +403,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
                 // Fire all callback errors
                 _fireCallbackErrors(server, new Error("connection closed due to parseError"));
                 // Emit error
-                _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server);
+                _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server, null, true);
               }
               // Short cut
               return;
@@ -449,7 +453,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
       // Fire all callback errors
       _fireCallbackErrors(server, err);
       // Emit error
-      _emitAcrossAllDbInstances(server, eventReceiver, "timeout", err, server);
+      _emitAcrossAllDbInstances(server, eventReceiver, "timeout", err, server, true);
     }
   });
 
@@ -477,7 +481,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
       // Fire all callback errors
       _fireCallbackErrors(server, new Error(message && message.err ? message.err : message));
       // Emit error
-      _emitAcrossAllDbInstances(server, eventReceiver, "error", new Error(message && message.err ? message.err : message), server);
+      _emitAcrossAllDbInstances(server, eventReceiver, "error", new Error(message && message.err ? message.err : message), server, true);
     }
   });
 
@@ -505,7 +509,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
       // Fire all callback errors
       _fireCallbackErrors(server, new Error("connection closed"));
       // Emit error
-      _emitAcrossAllDbInstances(server, eventReceiver, "close", server);
+      _emitAcrossAllDbInstances(server, eventReceiver, "close", server, null, true);
     }
   });
 
@@ -536,7 +540,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
       // Fire all callback errors
       _fireCallbackErrors(server, new Error("connection closed due to parseError"));
       // Emit error
-      _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server);
+      _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server, null, true);
     }
   });
 
@@ -586,7 +590,7 @@ var _fireCallbackErrors = function(server, err) {
 /**
  * @ignore
  */
-var _emitAcrossAllDbInstances = function(server, filterDb, event, message, object) {
+var _emitAcrossAllDbInstances = function(server, filterDb, event, message, object, resetConnection) {
   // Emit close event across all db instances sharing the sockets
   var allServerInstances = server.allServerInstances();
   // Fetch the first server instance
@@ -595,6 +599,9 @@ var _emitAcrossAllDbInstances = function(server, filterDb, event, message, objec
   if(Array.isArray(serverInstance.dbInstances) && serverInstance.dbInstances.length >= 1) {
 	  for(var i = 0; i < serverInstance.dbInstances.length; i++) {
       var dbInstance = serverInstance.dbInstances[i];
+      // Set the parent
+      if(resetConnection && typeof dbInstance.openCalled != 'undefined')
+        dbInstance.openCalled = false;
       // Check if it's our current db instance and skip if it is
       if(filterDb == null || filterDb.databaseName !== dbInstance.databaseName || filterDb.tag !== dbInstance.tag) {
         // Only emit if there is a listener
