@@ -10,7 +10,7 @@ var testCase = require('nodeunit').testCase,
   ReadPreference = mongodb.ReadPreference,
   ReplSetServers = mongodb.ReplSetServers,
   Server = mongodb.Server,
-  Step = require("step");  
+  Step = require("step");
 
 // Keep instance of ReplicaSetManager
 var serversUp = false;
@@ -19,14 +19,14 @@ var RS = RS == null ? null : RS;
 
 var ensureConnection = function(test, numberOfTries, callback) {
   // Replica configuration
-  var replSet = new ReplSetServers( [ 
+  var replSet = new ReplSetServers( [
       new Server( RS.host, RS.ports[1], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[0], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[2], { auto_reconnect: true } )
-    ], 
+    ],
     {rs_name:RS.name}
   );
-  
+
   if(numberOfTries <= 0) return callback(new Error("could not connect correctly"), null);
 
   var db = new Db('integration_test_', replSet);
@@ -49,25 +49,25 @@ var ensureConnection = function(test, numberOfTries, callback) {
       }, 1000);
     } else {
       return callback(null, p_db);
-    }    
-  })            
+    }
+  })
 }
 
 var identifyServers = function(rs, dbname, callback) {
   // Total number of servers to query
   var numberOfServersToCheck = Object.keys(rs.mongods).length;
-  
+
   // Arbiters
   var arbiters = [];
   var secondaries = [];
   var primary = null;
-  
+
   // Let's establish what all servers so we can pick targets for our queries
   var keys = Object.keys(rs.mongods);
   for(var i = 0; i < keys.length; i++) {
     var host = rs.mongods[keys[i]].host;
     var port = rs.mongods[keys[i]].port;
-    
+
     // Connect to the db and query the state
     var server = new Server(host, port,{auto_reconnect: true});
     // Create db instance
@@ -80,9 +80,9 @@ var identifyServers = function(rs, dbname, callback) {
       } else if(db.serverConfig.isMasterDoc.secondary) {
         secondaries.push({host:db.serverConfig.host, port:db.serverConfig.port});
       } else if(db.serverConfig.isMasterDoc.arbiterOnly) {
-        arbiters.push({host:db.serverConfig.host, port:db.serverConfig.port});          
+        arbiters.push({host:db.serverConfig.host, port:db.serverConfig.port});
       }
-            
+
       // Close the db
       db.close();
       // If we are done perform the callback
@@ -90,13 +90,13 @@ var identifyServers = function(rs, dbname, callback) {
         callback(null, {primary:primary, secondaries:secondaries, arbiters:arbiters});
       }
     })
-  }  
+  }
 }
 
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 exports.setUp = function(callback) {
@@ -104,15 +104,15 @@ exports.setUp = function(callback) {
   if(!serversUp && !noReplicasetStart) {
     serversUp = true;
     RS = new ReplicaSetManager({retries:120, secondary_count:2, passive_count:1, arbiter_count:1});
-    RS.startSet(true, function(err, result) {      
+    RS.startSet(true, function(err, result) {
       if(err != null) throw err;
       // Finish setup
-      callback();      
-    });      
-  } else {    
+      callback();
+    });
+  } else {
     RS.restartKilledNodes(function(err, result) {
       if(err != null) throw err;
-      callback();        
+      callback();
     })
   }
 }
@@ -120,7 +120,7 @@ exports.setUp = function(callback) {
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 exports.tearDown = function(callback) {
@@ -128,11 +128,11 @@ exports.tearDown = function(callback) {
   if(numberOfTestsRun == 0) {
     // Finished kill all instances
     RS.killAll(function() {
-      callback();              
+      callback();
     })
   } else {
-    callback();            
-  }  
+    callback();
+  }
 }
 
 exports['Connection to a arbiter host with primary preference should give error'] = function(test) {
@@ -141,7 +141,7 @@ exports['Connection to a arbiter host with primary preference should give error'
     // Let's grab an arbiter, connect and attempt a query
     var host = servers.arbiters[0].host;
     var port = servers.arbiters[0].port;
-    
+
     // Connect to the db
     var server = new Server(host, port,{auto_reconnect: true});
     // Create db instance
@@ -152,9 +152,9 @@ exports['Connection to a arbiter host with primary preference should give error'
         test.ok(err instanceof Error);
         test.equal('Cannot write to an arbiter', err.message);
         p_db.close();
-        test.done();      
+        test.done();
       });
-    });      
+    });
   });
 }
 
@@ -165,7 +165,7 @@ exports['Connection to a single primary host with different read preferences'] =
     // Let's grab a secondary server
     var host = servers.primary.host;
     var port = servers.primary.port;
-    
+
     // Connect to the db
     var server = new Server(host, port,{auto_reconnect: true, readPreference:Server.READ_PRIMARY});
     // Create db instance
@@ -190,7 +190,7 @@ exports['Connection to a single primary host with different read preferences'] =
                 test.equal(null, err);
                 test.equal(0, items.length);
                 p_db.close();
-                
+
                 // test.done();
 
                 // Connect to the db
@@ -215,7 +215,7 @@ exports['Connection to a single primary host with different read preferences'] =
           });
         });
       });
-    });      
+    });
   });
 }
 
@@ -226,7 +226,7 @@ exports['Connection to a single secondary host with different read preferences']
     // Let's grab a secondary server
     var host = servers.secondaries[0].host;
     var port = servers.secondaries[0].port;
-    
+
     // Connect to the db
     var server = new Server(host, port,{auto_reconnect: true, readPreference:Server.READ_PRIMARY});
     // Create db instance
@@ -236,9 +236,6 @@ exports['Connection to a single secondary host with different read preferences']
       p_db.collection("read_preference_single_test_1", function(err, collection) {
         // Attempt to read (should fail due to the server not being a primary);
         collection.find().toArray(function(err, items) {
-          console.log("==================================================================================")
-          console.dir(err)
-
           test.ok(err instanceof Error);
           test.equal("Read preference is Server.PRIMARY and server is not master", err.message);
           p_db.close();
@@ -278,14 +275,14 @@ exports['Connection to a single secondary host with different read preferences']
           });
         });
       });
-    });      
+    });
   });
 }
 
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 exports.noGlobalsLeaked = function(test) {
@@ -297,7 +294,7 @@ exports.noGlobalsLeaked = function(test) {
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 var numberOfTestsRun = Object.keys(this).length - 2;
